--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts --dev",
+    "prod":"nodemon server.ts --prod"
   },
   "author": "",
   "license": "ISC",
