--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "nodemon":"^3.0.1"
   }
 }
