--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts --dev",
-    "prod":"nodemon server.ts --prod"
+    "prod":"node server.ts --prod"
   },
   "author": "",
   "license": "ISC",
