--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts --dev",
-    "prod":"node server.ts --prod"
+    "prod":"node dist/index.js",
+    "postinstall": "tsc"
   },
   "author": "",
   "license": "ISC",
