--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts --dev",
-    "prod":"node dist/index.js",
-    "postinstall": "tsc"
+    "prod":"node dist/server.js",
+    "postinstall": "tsc",
+    "build":"tsc"
   },
   "author": "",
   "license": "ISC",
