--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts --dev",
+    "test_prod":"nodemon server.ts ",
     "prod":"node dist/server.js",
     "postinstall": "tsc",
     "build":"tsc"
